--- a/index.html
+++ b/index.html
@@ -2,15 +2,86 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Great Idea - Responsive I</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">  
+    <meta charset="utf-8">
+    <title>Great Idea - Responsive I</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
 
 </head>
 
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+
+  <div class="container">
+  <header>
+      <nav>
+          <a href="#">Services</a>
+          <a href="#">Product</a>
+          <a href="#">Vision</a>
+          <a href="#">Features</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+          <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      </nav>
+  </header>
+  </div>
+
+  <div class="logo-con">
+  <h1 class="moto">
+      INNOVATION <br/> ON <br/> DEMAND   
+  </h1>
+
+  <button class="gsbutton">Get Started</button>
+  </div>
+
+  <div class="logo1">
+  <img src="img/header-img.png" alt="Image of a code snippet.">
+  </div>
+
+  <div class="line"></div>
+
+  <div class="information">
+
+  <section class="features">
+      <heading>Features</heading>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+
+  <section class="about">
+      <heading>About</heading>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+  <section class="services">
+      <heading class="services">Services</heading>
+      <p class="p3">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+
+  <section class="product">
+      <heading class="product">Product</heading>
+      <p class="p4">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+
+  <section class="vision">
+      <heading class="vision">Vision</heading>
+      <p class="p5">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+  </div>
+
+  <div class="line"></div>
+
+  <div class="contact">
+  <heading>Contact</heading>
+  <p>123 Way 456 Street</p>
+  <p>Somewhere, USA</p>
+  <p>1 (888) 888-8888</p>
+  <p>sales@greatidea.io</p>
+  </div>
+  <p class="copywrite">Great Idea! &copy;2018<p />
+
 </body>
 </html>
