--- a/index.html
+++ b/index.html
@@ -15,73 +15,76 @@
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 
   <div class="container">
-  <header>
-      <nav>
-          <a href="#">Services</a>
-          <a href="#">Product</a>
-          <a href="#">Vision</a>
-          <a href="#">Features</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-          <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  <header class="header">
+      <nav class="navigation">
+        <a href="#">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
       </nav>
+      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
   </header>
   </div>
 
-  <div class="logo-con">
-  <h1 class="moto">
-      INNOVATION <br/> ON <br/> DEMAND   
-  </h1>
+  <div class="body-page">
 
-  <button class="gsbutton">Get Started</button>
+    <div class="logo-con">
+        <h1 class="moto">
+            INNOVATION <br/> 
+            ON <br/> 
+            DEMAND   
+        </h1>
+
+        <button class="gsbutton">Get Started</button>
+        
+        <img class="logo1" src="img/header-img.png" alt="Image of a code snippet.">
+        
+    </div>
+    <div class="line"></div>
+
+    <div class="information">
+
+    <section class="features">
+        <h2>Features</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+
+    <section class="about">
+        <h2>About</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+    <section class="services">
+        <h2 class="services">Services</h2>
+        <p class="p3">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+
+    <section class="product">
+        <h2 class="product">Product</h2>
+        <p class="p4">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+
+    <section class="vision">
+        <h2 class="vision">Vision</h2>
+        <p class="p5">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+    </div>
+
+    <div class="line"></div>
+
+    <div class="contact">
+    <heading>Contact</heading>
+    <p>123 Way 456 Street</p>
+    <p>Somewhere, USA</p>
+    <p>1 (888) 888-8888</p>
+    <p>sales@greatidea.io</p>
+    </div>
+    <p class="copywrite">Great Idea! &copy;2018<p />
+
   </div>
-
-  <div class="logo1">
-  <img src="img/header-img.png" alt="Image of a code snippet.">
-  </div>
-
-  <div class="line"></div>
-
-  <div class="information">
-
-  <section class="features">
-      <heading>Features</heading>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-  </section>
-
-  <section class="about">
-      <heading>About</heading>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-  </section>
-
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-
-  <section class="services">
-      <heading class="services">Services</heading>
-      <p class="p3">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-  </section>
-
-  <section class="product">
-      <heading class="product">Product</heading>
-      <p class="p4">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-  </section>
-
-  <section class="vision">
-      <heading class="vision">Vision</heading>
-      <p class="p5">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-  </section>
-  </div>
-
-  <div class="line"></div>
-
-  <div class="contact">
-  <heading>Contact</heading>
-  <p>123 Way 456 Street</p>
-  <p>Somewhere, USA</p>
-  <p>1 (888) 888-8888</p>
-  <p>sales@greatidea.io</p>
-  </div>
-  <p class="copywrite">Great Idea! &copy;2018<p />
-
 </body>
 </html>
