--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 
   <div class="container">
-  <header class="header">
-      <nav class="navigation">
-        <a href="#">Services</a>
-        <a href="#">Product</a>
-        <a href="#">Vision</a>
-        <a href="#">Features</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-      </nav>
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  </header>
+    <header class="header">
+        <nav class="navigation">
+            <a class="border-top" href="#">Services</a>
+            <a href="#">Product</a>
+            <a href="#">Vision</a>
+            <a href="#">Features</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </nav>
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    </header>
   </div>
 
   <div class="body-page">
@@ -46,32 +46,32 @@
 
     <div class="information">
 
-    <section class="features">
-        <h2>Features</h2>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
+        <section class="features">
+            <h2>Features</h2>
+            <p class="p1">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </section>
 
-    <section class="about">
-        <h2>About</h2>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
+        <section class="about">
+            <h2>About</h2>
+            <p class="p2">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </section>
 
-    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+        <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
-    <section class="services">
-        <h2 class="services">Services</h2>
-        <p class="p3">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
+        <section class="services">
+            <h2 class="services">Services</h2>
+            <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </section>
 
-    <section class="product">
-        <h2 class="product">Product</h2>
-        <p class="p4">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
+        <section class="product">
+            <h2 class="product">Product</h2>
+            <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </section>
 
-    <section class="vision">
-        <h2 class="vision">Vision</h2>
-        <p class="p5">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
+        <section class="vision">
+            <h2 class="vision">Vision</h2>
+            <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </section>
     </div>
 
     <div class="line"></div>
