desktop View optimized.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Great Idea - Responsive I</title>
 
@@ -12,79 +13,91 @@
 </head>
 
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+    <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 
-  <div class="container">
-    <header class="header">
-        <nav class="navigation">
-            <a class="border-top" href="#">Services</a>
-            <a href="#">Product</a>
-            <a href="#">Vision</a>
-            <a href="#">Features</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-        </nav>
-        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-    </header>
-  </div>
+    <div class="container">
+        <header class="header">
+            <nav class="navigation">
+                <a class="border-top" href="#">Services</a>
+                <a href="#">Product</a>
+                <a href="#">Vision</a>
+                <a href="#">Features</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </nav>
+            <a href="logo-home"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+        </header>
 
-  <div class="body-page">
 
-    <div class="logo-con">
-        <h1 class="moto">
-            INNOVATION <br/> 
-            ON <br/> 
-            DEMAND   
-        </h1>
+        <div class="body-page">
 
-        <button class="gsbutton">Get Started</button>
-        
-        <img class="logo1" src="img/header-img.png" alt="Image of a code snippet.">
-        
-    </div>
-    <div class="line"></div>
+            <div class="logo-con">
+                <h1 class="moto">
+                    INNOVATION <br />
+                    ON <br />
+                    DEMAND
+                    <button class="gsbutton">Get Started</button>
+                </h1>
 
-    <div class="information">
 
-        <section class="features">
-            <h2>Features</h2>
-            <p class="p1">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-        </section>
 
-        <section class="about">
-            <h2>About</h2>
-            <p class="p2">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-        </section>
+                <img class="logo1" src="img/header-img.png" alt="Image of a code snippet.">
 
-        <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+            </div>
+            <div class="line"></div>
 
-        <section class="services">
-            <h2 class="services">Services</h2>
-            <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-        </section>
+            <div class="information">
 
-        <section class="product">
-            <h2 class="product">Product</h2>
-            <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-        </section>
+                <section class="features">
+                    <h2>Features</h2>
+                    <p class="p1">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio,
+                        in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus
+                        scelerisque quis.</p>
+                </section>
 
-        <section class="vision">
-            <h2 class="vision">Vision</h2>
-            <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-        </section>
-    </div>
+                <section class="about">
+                    <h2>About</h2>
+                    <p class="p2">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio,
+                        in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus
+                        scelerisque quis.</p>
+                </section>
 
-    <div class="line"></div>
+                <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
-    <div class="contact">
-    <heading>Contact</heading>
-    <p>123 Way 456 Street</p>
-    <p>Somewhere, USA</p>
-    <p>1 (888) 888-8888</p>
-    <p>sales@greatidea.io</p>
-    </div>
-    <p class="copywrite">Great Idea! &copy;2018<p />
+                <section class="spv">
+                    <div class="left">
+                        <h2>Services</h2>
+                        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
+                            interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus
+                            scelerisque quis.</p>
+                    </div>
+                    <div class="middle">
+                        <h2>Product</h2>
+                        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
+                            interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus
+                            scelerisque quis.</p>
+                    </div>
+                    <div class="right">
+                        <h2>Vision</h2>
+                        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in
+                            interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus
+                            scelerisque quis.</p>
+                    </div>
+                </section>
+            </div>
 
-  </div>
+            <div class="line"></div>
+
+            <div class="contact">
+                <h2>Contact</h2>
+                <p>123 Way 456 Street</p>
+                <p>Somewhere, USA</p>
+                <p>1 (888) 888-8888</p>
+                <p>sales@greatidea.io</p>
+            </div>
+            <p class="copywrite">Great Idea! &copy;2018
+                <p />
+        </div>
 </body>
+
 </html>
