--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <div class="container">
         <header class="header">
             <nav class="navigation">
-                <a class="border-top" href="#">Services</a>
+                <a href="#">Services</a>
                 <a href="#">Product</a>
                 <a href="#">Vision</a>
                 <a href="#">Features</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </nav>
-            <a href="logo-home"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+            <a href="home" ><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
         </header>
 
 
@@ -44,7 +44,6 @@
                 <img class="logo1" src="img/header-img.png" alt="Image of a code snippet.">
 
             </div>
-            <div class="line"></div>
 
             <div class="information">
 
@@ -85,8 +84,6 @@
                     </div>
                 </section>
             </div>
-
-            <div class="line"></div>
 
             <div class="contact">
                 <h2>Contact</h2>
